# listening-modal-llm

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
ci/: check_inference.py  check_loss.py  prep_for_ci.py
config/: listening-llama-70b.yml  listening-llama-7b.yml  listening-llama-8b.yml
src/: __init__.py  clean.py  common.py  inference.py  prepare_training_data.py  train.py
training_documents/abortion_cache/: abortion.llm.label_p1_s3.json  abortion.llm.label_p1_s3.prompt.txt  abortion.llm.label_p3_s10.json  abortion.llm.label_p3_s10.prompt.txt  abortion.llm.update_p1_s3.json  abortion.llm.update_p1_s3.prompt.txt  abortion.llm.update_p2_s12.json  abortion.llm.update_p2_s12.prompt.txt  abortion.llm.update_p3_s10.json  abortion.llm.update_p3_s10.prompt.txt  abortion.llm.update_p6_s33.json  abortion.llm.update_p6_s33.prompt.txt  abortion.md  abortion.ocr.json  abortion.ocr.math.json  abortion.vision.json
training_documents/allele_cache/: allele.llm.label_p10_s13.json  allele.llm.label_p10_s13.prompt.txt  allele.llm.label_p11_s21.json  allele.llm.label_p11_s21.prompt.txt  allele.llm.label_p13_s14.json  allele.llm.label_p13_s14.prompt.txt  allele.llm.label_p1_s1.json  allele.llm.label_p1_s1.prompt.txt  allele.llm.label_p4_s8.json  allele.llm.label_p4_s8.prompt.txt  allele.llm.label_p7_s4.json  allele.llm.label_p7_s4.prompt.txt  allele.llm.label_p8_s107.json  allele.llm.label_p8_s107.prompt.txt  allele.llm.update_p10_s13.json  allele.llm.update_p10_s13.prompt.txt  allele.llm.update_p10_s6.json  allele.llm.update_p10_s6.prompt.txt  (+25 more)
(+5838 files in other folders)
