[tool.poetry]
name = "listening-modal-llm"
version = "0.1.0"
description = ""
authors = ["jtschoonhoven <jtschoonhoven@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
modal = "^0.64.60"
huggingface-hub = "^0.24.6"
pyyaml = "^6.0.2"
vllm = "^0.5.5"
datasets = "^2.21.0"
python-dotenv = "^1.0.1"
pymupdf = "^1.24.10"
pdf2image = "^1.17.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.2"
types-pyyaml = "^6.0.12.20240808"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
